@@ -2,8 +2,26 @@
 account_data = report.account_data;
 FORMATS = LIST_FORMATS();
 
-LINK = 'http://' _ ENVARS.SERVER_NAME _ ENVARS.SCRIPT_NAME 
-           _ '?' _ ENVARS.QUERY_STRING _ '&company=' _ DBNAME;
+PROTO='http';
+
+IF (ENVARS.SERVER_PORT == '443') or 
+   (ENVARS.HTTPS and ENVARS.HTTPS != 'OFF'); 
+   PROTO='https'; 
+END;
+
+SERVER = ENVARS.SERVER_NAME;
+
+IF (ENVARS.SERVER_PORT != '80') and ENVARS.SERVER_PORT
+                                and (ENVARS.SERVER_PORT != '443');
+   SERVER = SERVER _ ':' _ ENVARS.SERVER_PORT;
+END;
+
+QSTR=ENVARS.QUERY_STRING;
+
+LINK = PROTO _ '://' _ SERVER _ ENVARS.SCRIPT_NAME 
+           _ '?' _ QSTR _ '&' _ 'company=' _ DBNAME;
+
+LINK = LINK.replace('\&\&', '&');
 ?>
 <?lsmb COLS = comparison.length + 2 ?>
 <body class="financial-statement <?lsmb dojo_theme ?>">
